# simd_integral

./: CMakeLists.txt  README.txt  conf.txt  integr_main.cpp  runner_script.py
include/: config_parser.h  function.h  integration.h
src/: config_parser.cpp  function.cpp  integration.cpp
